<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#71B3E8"
    tools:context=".BienvenidaClienteActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulo_bienvenida"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.107" />

    <Button
        android:id="@+id/btnTecn"
        android:layout_width="350dp"
        android:layout_height="75dp"
        android:backgroundTint="#2D345A"
        android:text="@string/opcion1"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btnSuscripcion"
        app:layout_constraintStart_toStartOf="@+id/btnSuscripcion"
        app:layout_constraintTop_toBottomOf="@+id/tvNombreUsuario"
        app:layout_constraintVertical_bias="0.09" />

    <Button
        android:id="@+id/btnSuscripcion"
        android:layout_width="350dp"
        android:layout_height="70dp"
        android:backgroundTint="#2D345A"
        android:text="@string/opcion2"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/button4"
        app:layout_constraintHorizontal_bias="0.383"
        app:layout_constraintStart_toStartOf="@+id/button4"
        app:layout_constraintTop_toBottomOf="@+id/btnTecn"
        app:layout_constraintVertical_bias="0.061" />

    <Button
        android:id="@+id/button4"
        android:layout_width="350dp"
        android:layout_height="73dp"
        android:backgroundTint="#2D345A"
        android:text="@string/opcion3"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.475"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSuscripcion"
        app:layout_constraintVertical_bias="0.1" />

    <Button
        android:id="@+id/btnCerrar"
        android:layout_width="130dp"
        android:layout_height="55dp"
        android:backgroundTint="@color/black"
        android:text="@string/cerrarsesion"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button4" />

    <TextView
        android:id="@+id/tvNombreUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nombre_usuario"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.101" />

    <ImageView
        android:id="@+id/imgActualizar"
        android:layout_width="53dp"
        android:layout_height="48dp"
        android:contentDescription="@string/icono_ajustes"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.949"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023"
        app:srcCompat="@drawable/ajustes" />

</androidx.constraintlayout.widget.ConstraintLayout>